--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https//Fendyx.github.io/dajdaj",
+  "homepage": "https://fendyx.github.io/dajdaj",
   "name": "dajdaj_react",
   "version": "0.1.0",
   "private": true,
@@ -11,6 +11,8 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "ajv": "^8.17.1",
+    "ajv-keywords": "^5.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.4.0",
